# zkp-aggregation-template

./: Cargo.toml  README.md  README1.md  foundry.toml
contracts/: README.md
contracts/src/: Fibonacci.sol  SP1AggregateVerifier.sol
contracts/src/fixtures/: groth16-offchain.json  groth16-onchain-abi.json  groth16-onchain.json
contracts/test/: Fibonacci.t.sol  SP1AggregateVerifier.sol
elf/: aggregator-elf  fibonacci-elf
fibonacci/program/: Cargo.toml
fibonacci/script/: Cargo.toml
fibonacci/script/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
