[package]
version = "0.1.0"
name = "aggregator-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "3.1.0", features = ["verify"]}
sha2 = { version = "0.10.8"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rs_merkle = { version = "1.4.2"}
