[package]
name = "fibonacci-script"
version = { workspace = true }
edition = { workspace = true }
default-run = "fibonacci-script"
publish = false

[dependencies]
hex = "0.4.3"
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-build = "3.1.0"


[[bin]]
name = "fibonacci-script"
path = "src/main.rs"

[features]
cuda = ["sp1-sdk/cuda"]
